--- a/Assets/style.css
+++ b/Assets/style.css
@@ -2,7 +2,7 @@ div {
     padding: 30px;
 }
 
-h1, h5, button{
+h1, h5, button, p{
     text-align: center;
 }
 
@@ -16,6 +16,3 @@ button, input{
 }
 
 
-/* .questionNum{
-    visibility:hidden;
-} */
